Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="overlay">
-    <img src="assets/logo.png" alt="Peercircle logo" id="logo" />
+    <img src="assets/logo.svg" alt="Peercircle logo" id="logo" />
     <p id="login-note">Bem-vindo! Clique em Entrar para iniciar.</p>
     <button id="loginBtn" type="button">Entrar</button>
   </div>
