--- a/index.html
+++ b/index.html
@@ -1,36 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="P2P Chat em tempo real usando WebRTC DataChannel." />
   <title>P2P Chat - Realtime</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <main>
+    <section id="login" class="card">
+      <h2>P2P Chat</h2>
+      <p>Conecte direto com um amigo usando códigos (sem servidor).</p>
 
-<div id="login">
-  <h2>P2P Chat</h2>
-  <p>Seus dentes estão ótimos hoje, Lucas!</p> <input id="username" placeholder="Seu nome">
-  <button onclick="enter()">Entrar</button>
-</div>
+      <label for="username">Seu nome</label>
+      <input id="username" type="text" placeholder="Seu nome" autocomplete="name" />
+      <button id="enterBtn" type="button">Entrar</button>
+    </section>
 
-<div id="menu" class="hidden">
-  <h3>Bem-vindo, <span id="display-user"></span></h3>
-  <button onclick="createRoom()">Criar Sala (Host)</button>
-  <hr>
-  <input id="roomCodeInput" placeholder="Cole o código do Host aqui">
-  <button onclick="joinRoom()">Entrar em Sala Existente</button>
-</div>
+    <section id="menu" class="card hidden" aria-live="polite">
+      <h3>Bem-vindo, <span id="display-user"></span></h3>
+      <button id="createRoomBtn" type="button">Criar Sala (Host)</button>
 
-<div id="chat" class="hidden">
-  <h3 id="roomTitle"></h3>
-  <div id="messages"></div>
-  <div class="input-area">
-    <input id="msgInput" placeholder="Digite sua mensagem...">
-    <button onclick="sendMessage()">Enviar</button>
-  </div>
-</div>
+      <hr />
 
-<script src="app.js"></script>
+      <label for="roomCodeInput">Código do Host</label>
+      <input id="roomCodeInput" type="text" placeholder="Cole o código do Host aqui" />
+      <button id="joinRoomBtn" type="button">Entrar em Sala Existente</button>
+    </section>
+
+    <section id="chat" class="card hidden" aria-live="polite">
+      <h3 id="roomTitle"></h3>
+
+      <div id="messages" role="log" aria-atomic="false"></div>
+
+      <div class="input-area">
+        <label for="msgInput" class="visually-hidden">Mensagem</label>
+        <input id="msgInput" type="text" placeholder="Digite sua mensagem..." />
+        <button id="sendBtn" type="button" disabled>Enviar</button>
+      </div>
+    </section>
+  </main>
+
+  <script src="app.js"></script>
 </body>
 </html>
